--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.1.4"
+    "@testing-library/react": "^9.1.4",
+    "prettier": "^2.0.5"
   }
 }
