add prettier script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "raw.macro": "^0.3.0",
+    "raw.macro": "^0.4.2",
     "react": "^16.9.0",
     "react-accessible-accordion": "^3.0.0",
     "react-dom": "^16.9.0",
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write ."
   },
   "eslintConfig": {
     "extends": "react-app"
